# paracel

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  README.md  copyright  mesos_executor.py  mesos_scheduler.py  mrun  prun.py
alg/: README.md
alg/classification/logistic_regression/: CMakeLists.txt  README.md  demo_cfg.json  lr.cpp  lr.hpp  lr_driver.cpp  update.cpp
alg/clustering/kmeans/: CMakeLists.txt  README.md  demo_cfg.json  kmeans.hpp  kmeans_driver.cpp  update.cpp
alg/graph_alg/max_vertex_value/: CMakeLists.txt  README.md  demo_cfg.json  max_vertex_value.hpp  max_vertex_value_driver.cpp  max_vertex_value_pregel.cpp  update.cpp
alg/graph_alg/pagerank/: CMakeLists.txt  README.md  data_clean.py  demo_cfg.json  handle.cpp  main.cpp  pr.hpp
alg/misc/steady_state_inversion/: pre_fmt.py  steady_state_inversion.hpp
alg/misc/word_count/: CMakeLists.txt  README.md  handle.cpp  wc.hpp  wc_driver.cpp
alg/recommendation/adjust_ktop_sparse/: CMakeLists.txt  adjust_ktop_sparse.hpp  driver.cpp
alg/recommendation/als/: CMakeLists.txt  README.md  als.hpp  als_driver.cpp  als_validate_driver.cpp  demo_cfg.json  generate_data.py  split_validate.py
alg/recommendation/decision_tree_rec/: CMakeLists.txt  README.md  decision_tree_builder.hpp  driver.cpp  handle.cpp
alg/recommendation/matrix_factorization/: CMakeLists.txt  README.md  demo_cfg.json  filter.cpp  mf.hpp  mf_driver.cpp  update.cpp
alg/recommendation/similarity_dense/: CMakeLists.txt  README.md  ab_driver.cpp  demo_ab_sim_cfg.json  demo_cfg.json  driver.cpp  sim_dense.hpp
alg/recommendation/similarity_sparse/: CMakeLists.txt  README.md  sim_sparse_driver.cpp  sim_sparse_row.hpp
alg/recommendation/svd/: CMakeLists.txt  README.md  main.cpp  svd.hpp  update.cpp
alg/regression/ridge/: CMakeLists.txt  README.md  ridge.hpp  ridge_driver.cpp  update.cpp
alg/topic_model/: CMakeLists.txt  README.md  gLDA.hpp  gLDA_demo.json  gLDA_driver.cpp  handle.cpp
cmakes/: FindEigen.cmake  FindGFlags.cmake  FindGlog.cmake  FindMsgpackC.cmake  FindZeroMQ.cmake
doc/: api_reference.html  index.md  quick_tutorial.html
doc/stylesheets/: print.css  screen.css
ebuild/: boost-1.55.0-r1.ebuild  eigen-3.1.3.ebuild  gflags-2.0.ebuild  glog-0.3.3.ebuild  mesos-0.15-r1.ebuild  mpich2-1.4.1_p1.ebuild  msgpack-0.5.8-r1.ebuild  zeromq-3.2.4.ebuild
external_usage/: Makefile.in  README.md  demo_cfg.json  driver.cpp  make_gen.cpp  registery.cpp
include/: client.hpp  graph.hpp  kv.hpp  kv_def.hpp  load.hpp  packer.hpp  paracel_types.hpp  pregel.hpp  proxy.hpp  ps.hpp  ring.hpp  server.hpp  utils.hpp
include/load/: loader.hpp  parser.hpp  partition.hpp  scheduler.hpp
include/pregel/: vertex.hpp
include/utils/: comm.hpp  decomp.hpp  ext_utility.hpp  func_utility.hpp  hash.hpp
src/: CMakeLists.txt  comm.cpp  default.cpp  local.cpp  paracelrun_cpp_proxy.cpp  scheduler.cpp  start_server.cpp
test/: CMakeLists.txt  test.hpp  test.json  test_client.cpp  test_comm.cpp  test_compile.cpp  test_decomp.cpp  test_f_traits.cpp  test_glog.cpp  test_graph.cpp  test_kv.cpp  test_packer.cpp  test_paracel_types.cpp  test_partition.cpp  test_paste.cpp  test_proxy.cpp  test_ring.cpp  test_server.cpp  test_tree_reduce.cpp  test_utils.cpp
tool/: CMakeLists.txt  README.md  datagen.py  gLDA_serial.cpp  kmeans_serial.cpp  lasso_serial.cpp  lasso_serial_rigid.cpp  lr_l1_serial.cpp  lr_serial.cpp  steady_state_inversion_serial.cpp  svd_serial.cpp
tool/balltree/: README.md  balltree.h  balltree.hpp  balltree.pyx  compile_cython.sh  setup.py  test_balltree.cc  unordered_map.pxd  usage.py
